Anzahl der Genome zum Start des Breeders jetzt konstant auf gBreederSettings.minGenomes(). Farbdifferenz wird jetzt im HSV-Farbraum berechnet. Mutation der DNA beinhaltet nun auch das Verschieben eines Genoms entlang des Stranges. Thread-Prioritaet waehlbar. Generation und Selected werden beim Laden der DNA aus Dateinamen gelesen.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -436,13 +436,16 @@
              <number>1</number>
             </property>
             <property name="maximum">
-             <number>999</number>
+             <number>9999</number>
+            </property>
+            <property name="pageStep">
+             <number>100</number>
             </property>
             <property name="value">
-             <number>230</number>
+             <number>2300</number>
             </property>
             <property name="sliderPosition">
-             <number>230</number>
+             <number>2300</number>
             </property>
             <property name="orientation">
              <enum>Qt::Vertical</enum>
