--- a/images.qrc
+++ b/images.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/images">
+    <qresource prefix="/testimages">
         <file>test/images/KWA10.jpg</file>
         <file>test/images/Lego-Tactical-Guy.jpg</file>
         <file alias="Mona-Lisa-256x256.png">test/images/Mona-Lisa-256x256.jpg</file>
