--- a/optionsform.ui
+++ b/optionsform.ui
@@ -21,7 +21,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="autoSaveTabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="breeding">
       <attribute name="title">
@@ -612,6 +612,27 @@
              <height>0</height>
             </size>
            </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_9">
+           <property name="text">
+            <string>Start distribution</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QComboBox" name="startDistributionComboBox">
+           <item>
+            <property name="text">
+             <string>tiled</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>random</string>
+            </property>
+           </item>
           </widget>
          </item>
         </layout>
