1. Versuch, eine neue Flusssteuerungen von Haupt- und Breeder-Thread zu implementieren, bei der es nicht zu Konflikten oder Deadlocks kommt und die OO-technisch moeglichst sauber ist.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -11,11 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Evo Cubist</string>
   </property>
   <property name="windowIcon">
    <iconset resource="images.qrc">
-    <normaloff>:/icons/icons/evo-cubist.ico</normaloff>:/icons/icons/evo-cubist.ico</iconset>
+    <normaloff>:/icons/icons/evo-cubist.ico.png</normaloff>:/icons/icons/evo-cubist.ico.png</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
