--- a/optionsform.ui
+++ b/optionsform.ui
@@ -7,18 +7,18 @@
     <x>0</x>
     <y>0</y>
     <width>427</width>
-    <height>362</height>
+    <height>390</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Evo Cubist - Options</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="images.qrc">
-    <normaloff>:/icons/icons/evo-cubist.ico</normaloff>:/icons/icons/evo-cubist.ico</iconset>
+   <iconset resource="evo-cubist.qrc">
+    <normaloff>:/icons/icons/evo-cubist.ico.png</normaloff>:/icons/icons/evo-cubist.ico.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+   <item row="2" column="0">
     <widget class="QTabWidget" name="autoSaveTabWidget">
      <property name="currentIndex">
       <number>0</number>
@@ -344,6 +344,60 @@
            </property>
           </widget>
          </item>
+         <item row="10" column="0">
+          <widget class="QLabel" name="label_9">
+           <property name="text">
+            <string>Start distribution</string>
+           </property>
+          </widget>
+         </item>
+         <item row="10" column="1">
+          <layout class="QHBoxLayout" name="horizontalLayout_7">
+           <item>
+            <widget class="QComboBox" name="startDistributionComboBox">
+             <property name="currentIndex">
+              <number>-1</number>
+             </property>
+             <item>
+              <property name="text">
+               <string>random</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>tiled</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>tiled w/ color hint</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>scattered</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item>
+            <widget class="QDoubleSpinBox" name="scatterFactorSpinBox">
+             <property name="minimum">
+              <double>0.010000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>2.000000000000000</double>
+             </property>
+             <property name="singleStep">
+              <double>0.050000000000000</double>
+             </property>
+             <property name="value">
+              <double>0.500000000000000</double>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
         </layout>
        </item>
        <item row="0" column="1">
@@ -597,6 +651,9 @@
       <layout class="QGridLayout" name="gridLayout_3">
        <item row="2" column="0">
         <layout class="QFormLayout" name="formLayout_3">
+         <property name="fieldGrowthPolicy">
+          <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+         </property>
          <item row="0" column="0">
           <widget class="QLabel" name="label_8">
            <property name="text">
@@ -612,32 +669,6 @@
              <height>0</height>
             </size>
            </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_9">
-           <property name="text">
-            <string>Start distribution</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QComboBox" name="startDistributionComboBox">
-           <item>
-            <property name="text">
-             <string>random</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>tiled</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>tiled w/ color hint</string>
-            </property>
-           </item>
           </widget>
          </item>
         </layout>
@@ -698,7 +729,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="images.qrc"/>
+  <include location="evo-cubist.qrc"/>
  </resources>
  <connections/>
 </ui>
