Copy-Konstruktoren von DNA und Genome liefert jetzt echte Klone (deep copy). Deshalb konnte die Flusssteuerung per Mutex eliminiert werden. DNA-Mutation von Breeder::mutate() nach DNA::mutate() verlagert. Neue Startverteilung (scattered w/ color hint).

--- a/optionsform.ui
+++ b/optionsform.ui
@@ -378,6 +378,11 @@
                <string>scattered</string>
               </property>
              </item>
+             <item>
+              <property name="text">
+               <string>scattered w/ color hint</string>
+              </property>
+             </item>
             </widget>
            </item>
            <item>
