--- a/optionsform.ui
+++ b/optionsform.ui
@@ -423,13 +423,13 @@
          <item>
           <widget class="QPushButton" name="resetPushButton">
            <property name="enabled">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
            <property name="toolTip">
             <string>Reset to defaults</string>
            </property>
            <property name="text">
-            <string>Reset</string>
+            <string>Reset to defaults</string>
            </property>
           </widget>
          </item>
@@ -721,7 +721,7 @@
          <item row="1" column="0">
           <widget class="QLabel" name="label_10">
            <property name="text">
-            <string>Cores used</string>
+            <string>Use # cores</string>
            </property>
           </widget>
          </item>
