Aufsplitten von Dreiecken (nur von Dreiecken!) durch Klicken auf Polygon im GenerationWidget jetzt möglich.

--- a/optionsform.ui
+++ b/optionsform.ui
@@ -383,6 +383,11 @@
                <string>scattered w/ color hint</string>
               </property>
              </item>
+             <item>
+              <property name="text">
+               <string>tiled triangles</string>
+              </property>
+             </item>
             </widget>
            </item>
            <item>
