--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -698,8 +698,24 @@
      <addaction name="actionSaveDNA"/>
      <addaction name="actionSaveSettings"/>
     </widget>
+    <widget class="QMenu" name="menuOpenRecentImage">
+     <property name="title">
+      <string>Open recent image</string>
+     </property>
+     <addaction name="separator"/>
+    </widget>
+    <widget class="QMenu" name="menuOpenRecentDNA">
+     <property name="title">
+      <string>Open recent DNA</string>
+     </property>
+     <addaction name="separator"/>
+    </widget>
     <addaction name="menuOpen"/>
     <addaction name="menuSave"/>
+    <addaction name="separator"/>
+    <addaction name="menuOpenRecentImage"/>
+    <addaction name="menuOpenRecentDNA"/>
+    <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
@@ -789,6 +805,11 @@
    </property>
    <property name="text">
     <string>Settings ...</string>
+   </property>
+  </action>
+  <action name="actionOpen_recent_image">
+   <property name="text">
+    <string>Open recent image</string>
    </property>
   </action>
  </widget>
