--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -671,7 +671,7 @@
      <x>0</x>
      <y>0</y>
      <width>655</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <property name="accessibleName">
@@ -697,18 +697,27 @@
      <addaction name="actionSaveSettings"/>
     </widget>
     <widget class="QMenu" name="menuOpenRecentImage">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="title">
       <string>Open recent image</string>
      </property>
      <addaction name="separator"/>
     </widget>
     <widget class="QMenu" name="menuOpenRecentDNA">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="title">
       <string>Open recent DNA</string>
      </property>
      <addaction name="separator"/>
     </widget>
     <widget class="QMenu" name="menuOpenRecentSettings">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="title">
       <string>Open recent settings</string>
      </property>
