Icons für LogViewerForm. Fehler beseitigt: Nach dem Laden einer Einstellungsdatei wurde ein "zufällig" generiertes Bild angezeigt und dann erst das in der Einstellungsdatei angegebene.

--- a/evo-cubist.qrc
+++ b/evo-cubist.qrc
@@ -7,5 +7,8 @@
     </qresource>
     <qresource prefix="/icons">
         <file>icons/evo-cubist.ico.png</file>
+        <file alias="copy-to-clipboard.png">icons/copy-to-clipboard.png</file>
+        <file alias="go-to-folder.png">icons/go-to-folder.png</file>
+        <file alias="show-picture.png">icons/show-picture.png</file>
     </qresource>
 </RCC>
