--- a/optionsform.ui
+++ b/optionsform.ui
@@ -627,6 +627,13 @@
               </property>
              </widget>
             </item>
+            <item row="8" column="1">
+             <widget class="QCheckBox" name="stopOnNextAutosaveCheckBox">
+              <property name="text">
+               <string>Stop on next autosave</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </item>
          </layout>
