--- a/optionsform.ui
+++ b/optionsform.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>427</width>
-    <height>396</height>
+    <height>409</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -715,7 +715,7 @@
          </property>
         </spacer>
        </item>
-       <item row="1" column="0">
+       <item row="2" column="0">
         <spacer name="verticalSpacer_3">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -748,6 +748,51 @@
           </widget>
          </item>
         </layout>
+       </item>
+       <item row="1" column="0" colspan="2">
+        <widget class="QGroupBox" name="groupBox_3">
+         <property name="minimumSize">
+          <size>
+           <width>30</width>
+           <height>100</height>
+          </size>
+         </property>
+         <property name="title">
+          <string>Background color</string>
+         </property>
+         <widget class="QFrame" name="backgroundColorFrame">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>19</y>
+            <width>71</width>
+            <height>71</height>
+           </rect>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: White</string>
+          </property>
+          <property name="frameShape">
+           <enum>QFrame::StyledPanel</enum>
+          </property>
+          <property name="frameShadow">
+           <enum>QFrame::Plain</enum>
+          </property>
+         </widget>
+         <widget class="QLineEdit" name="backgroundColorLineEdit">
+          <property name="geometry">
+           <rect>
+            <x>90</x>
+            <y>20</y>
+            <width>61</width>
+            <height>20</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>#FFFFFF</string>
+          </property>
+         </widget>
+        </widget>
        </item>
       </layout>
      </widget>
