--- a/optionsform.ui
+++ b/optionsform.ui
@@ -715,19 +715,6 @@
          </property>
         </spacer>
        </item>
-       <item row="2" column="0">
-        <spacer name="verticalSpacer_3">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
        <item row="0" column="0">
         <layout class="QFormLayout" name="formLayout_3">
          <property name="fieldGrowthPolicy">
@@ -748,6 +735,19 @@
           </widget>
          </item>
         </layout>
+       </item>
+       <item row="2" column="0">
+        <spacer name="verticalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
        </item>
        <item row="1" column="0" colspan="2">
         <widget class="QGroupBox" name="groupBox_3">
@@ -790,6 +790,19 @@
           </property>
           <property name="text">
            <string>#FFFFFF</string>
+          </property>
+         </widget>
+         <widget class="QPushButton" name="setBackgroundColorPushButton">
+          <property name="geometry">
+           <rect>
+            <x>90</x>
+            <y>50</y>
+            <width>61</width>
+            <height>23</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Set</string>
           </property>
          </widget>
         </widget>
