--- a/test/delaunay/mainwindow.ui
+++ b/test/delaunay/mainwindow.ui
@@ -14,13 +14,13 @@
    <string>Evo Cubist Polygon Test</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" colspan="2">
-    <widget class="QMenuBar" name="menuBar"/>
-   </item>
-   <item row="1" column="0">
-    <widget class="QWidget" name="centralWidget" native="true"/>
-   </item>
-   <item row="2" column="0">
+   <property name="margin">
+    <number>0</number>
+   </property>
+   <property name="spacing">
+    <number>4</number>
+   </property>
+   <item row="0" column="0">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QTextEdit" name="scriptEditor">
@@ -42,9 +42,9 @@ background-color: rgba(33, 33, 33, 200);</string>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QPushButton" name="executePushButton">
+        <widget class="QPushButton" name="runStopPushButton">
          <property name="text">
-          <string>Go</string>
+          <string>Run</string>
          </property>
         </widget>
        </item>
@@ -61,11 +61,18 @@ background-color: rgba(33, 33, 33, 200);</string>
          </property>
         </widget>
        </item>
+       <item>
+        <widget class="QPushButton" name="executePushButton">
+         <property name="text">
+          <string>Execute</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
     </layout>
    </item>
-   <item row="2" column="1">
+   <item row="0" column="1">
     <spacer name="horizontalSpacer_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
