--- a/test/delaunay/mainwindow.ui
+++ b/test/delaunay/mainwindow.ui
@@ -6,20 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>531</width>
-    <height>429</height>
+    <width>794</width>
+    <height>424</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Evo Cubist Polygon Test</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <property name="margin">
-    <number>0</number>
-   </property>
-   <property name="spacing">
-    <number>4</number>
-   </property>
    <item row="0" column="0">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
@@ -66,29 +60,12 @@ background-color: rgba(33, 33, 33, 200);</string>
          </property>
         </widget>
        </item>
-       <item>
-        <widget class="QPushButton" name="executePushButton">
-         <property name="text">
-          <string>Execute</string>
-         </property>
-        </widget>
-       </item>
       </layout>
      </item>
     </layout>
    </item>
    <item row="0" column="1">
-    <spacer name="horizontalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>246</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
+    <widget class="QGraphicsView" name="graphicsView"/>
    </item>
   </layout>
  </widget>
